# checkmate

./: .gitignore  AGENT.md  coding_standards.md  committing_changes.md  index.html  menu_bar_customization.md  package-lock.json  package.json  project_settings.json  start.sh  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vision.md  vite.config.ts
.checkmate/: commit_context.schema.json
.githooks/: commit-msg
docs/: frontend-design-principles.md  vision.md
docs/features/: ai-analysis-lifecycle.md  ai-latency-bottleneck-plan.md  pre-commit.md
examples/: self-hosted-flow.json
scripts/: install-git-hooks.sh  validate-vite-cache.mjs
src/: App.css  App.tsx  index.ts  main.tsx  project_coding_standards.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  index.ts
src/application/: index.ts
src/application/review/: index.ts  models.ts  selectors.test.ts  selectors.ts  state.ts
src/design-system/: index.ts
src/domain/review/: index.ts  (+2 more)
src/shared/: aiMessagesClient.ts  appConfig.ts  bedrockRuntime.ts  checkmateMention.test.ts  checkmateMention.ts  cn.ts  commentImageStorage.ts  desktopIntegration.ts  index.ts  integrationConnection.test.ts  integrationConnection.ts  latencyTrace.ts  localAgentRuntime.ts  openProjectInNewWindow.ts  projectLabelFromPath.ts  readRepositoryBranch.ts  readRepositoryBranches.ts  readRepositoryCommits.ts  readRepositoryReviewCommits.ts  readTextFile.ts  selectRepositoryFolder.test.ts  selectRepositoryFolder.ts
src/styles/: global.css
(+109 files in other folders)
