[package]
name = "easy_visualization_shell"
version = "0.1.0"
description = "Tauri desktop shell for checkmate.sh"
edition = "2021"
rust-version = "1.77"
license = "UNLICENSED"

[lib]
name = "easy_visualization_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
