[package]
name = "easy_visualization_shell"
version = "0.1.0"
description = "Tauri desktop shell for checkmate.sh"
edition = "2021"
rust-version = "1.77"
license = "UNLICENSED"

[lib]
name = "easy_visualization_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agent-client-protocol = "0.10.1"
async-trait = "0.1"
base64 = "0.22"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
